# rivorb

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
installer/: rivorb_installer.iss
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
